# visitor_forecast_fti_pipeline

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: crawled_content.csv
pipelines/: config.py  feature_pipeline.py  hopsworks_client.py  inference_pipeline.py  training_pipeline.py  weather_api.py
